# tensorflow_specialization_labs

./: 00_Full_Conversation_Notes_ML_AI_Robotics.py  011_formulas.ipynb  01_Formulas.ipynb  A_Labs_Outline.py  Classification_Metrics_Lab.ipynb  LSTM.py  forecasting_lab_colab.ipynb  main.py  nlp_next_word_prediction_complete.py  nlp_song_next_word_prediction.py  pyproject.toml  sentimental_embedding.py  sub_word_pieces.py  supervised_learning_expanded.ipynb  supervised_learning_master_edition.ipynb  supervised_learning_single_source_of_truth.ipynb  tansorflow_testing.py  tensorflow_notes_cnn.py  text_preprocessing.py  text_preprocessing_for_deep_learning.py  time_series_deep_neural_network_forcasting.py  time_series_dnn_window.py  time_series_liding window approach.py  time_series_rnn.py  understanding_word_embedding_and_pooling_in_nlp_models.py  word_embedding.py
.ipynb_checkpoints/: Classification_Metrics_Lab-checkpoint.ipynb  forecasting_lab_colab-checkpoint.ipynb  time_series-checkpoint.py
